# sugangcheck

./: .gitattributes  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: build-tauri-exe.yml
assets/: index-B0gvYVSt.js  index-BA7PRexw.js  index-BChcHemd.css  index-BWFjKTL6.js  index-BcQv7Inu.css  index-Bwb3ZQuj.css  index-C2L2WuT3.css  index-CQWdUxOA.css  index-CiOvWJiW.js  index-Cub9joiY.css  index-DNOtcm3h.js  index-DO6ApFZG.js  index-Jcokxj_a.js  index-LXV2QjKr.js  index-tMxpgjzQ.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/analytics/: detailedSelectionAnalysis.spec.ts  detailedSelectionAnalysis.ts  nonOverlappingSubjects.spec.ts  nonOverlappingSubjects.ts  subjectEnrollment.spec.ts  subjectEnrollment.ts
src/app/: externalLinks.ts  main.tsx  router.tsx  styles.css
src/components/: ClearLocalDataButton.tsx  CourseSelectionReviewTable.tsx  DataPreparationDashboard.spec.tsx  DataPreparationDashboard.tsx  DetailedConstraintRuleTable.tsx  ErrorFilters.tsx  ExternalCourseInputTable.tsx  ExternalCourseInputTabs.tsx  FilePreviewTable.tsx  HelpPanel.tsx  OperatingSubjectPicker.tsx  OperatingSubjectRegistrationNotice.tsx  OperatingSubjectReviewTable.spec.tsx  OperatingSubjectReviewTable.tsx  PrerequisiteRuleReviewTable.tsx  ProjectManager.tsx  ProjectPersistenceProvider.tsx  ProjectSectionImportControl.tsx  SemesterUploadSlots.spec.tsx  SemesterUploadSlots.tsx  StudentCourseSummaryTable.spec.tsx  (+12 more)
(+133 files in other folders)
